src/app/input-field/input-field.component.scss
.input-field {
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    flex-flow: nowrap;
    margin-bottom: 2px;

    input[type='checkbox'] {
        display: inline-block;
        margin-top: 2px;
    }
    label {
        padding: 0;
        min-width: 107px;
        cursor: default;
        font-size: 13px;
        overflow: visible;

        cds-icon {
            margin: -2px -1px 0 -2px;
            cursor: pointer;
        }
    }

    country-select {
        width: 100%;
        margin-bottom: -7px; // removes extra space due to "overflow-x: scroll"
    }

    genre-select {
        width: 100%;
    }

    ::ng-deep {
        clr-input-container.clr-form-control,
        clr-select-container.clr-form-control,
        clr-textarea-container.clr-form-control {
            margin-top: 0;
            flex-grow: 1;

            .clr-input-group {
                width: 100%;
            }
        }
        .clr-control-container {
            width: 100%;

            .clr-textarea-wrapper {
                margin-top: 0.1rem;
                width: calc(100% + 6px);
            }
            textarea {
                padding: 4px;
                width: 100%;
                height: 2.75rem;
            }
            .clr-input-wrapper {
                display: flex;
                width: 100%;

                .clr-input {
                    padding: 0 1px 0 3px;
                    width: 100%;
                }
            }
            .clr-select-wrapper {
                width: 100%;

                select {
                    width: 100%;
                }
            }
        }
        .clr-checkbox-wrapper {
            .clr-control-label {
                padding: 0;
            }
        }
    }

    .data-field {
        display: flex;
        flex: 1;

        input,
        select {
            flex-grow: 1;
            padding-top: 1px;
        }

        .dont-overwrite {
            color: #999;
        }
    }

    span.copied {
        position: absolute;
        right: 1px;
        font-size: 10px;
        transition: 1s opacity;
        color: #555;
        background-color: var(--clr-global-selection-color, #d8e3e9);
        border-radius: 3px;
        border: 1px solid blue;
        padding: 0px 3px;
        height: 22px;
        line-height: 18px;
        opacity: 0%;
        pointer-events: none;
        &.show {
            opacity: 100%;
        }
    }
}

.conflict-list {
    position: absolute;
    left: 42px;
    top: -4px;
    background-color: white;
    border: 1px solid lightgrey;
    padding: 0px 10px 5px;
    z-index: 1000;

    .header-row {
        min-width: 4.5rem;

        .close-btn {
            position: absolute;
            right: 2px;
            top: -3px;
            padding: 0;
            min-width: 30px;
        }
    }

    ol {
        counter-reset: item;

        li {
            list-style: none;

            &:before {
                content: counter(item) '. ';
                counter-increment: item;
                width: 1.5em;
                display: inline-block;
            }
        }

        .conflict-item:not(.disabled) {
            &:hover {
                color: black;
                cursor: pointer;
            }

            &:hover:before {
                color: black;
                content: '→';
            }
        }

        .edit-item {
            input {
                width: calc(100% - 1.5em);
            }
        }
    }
}

